Modeled entities and created a baseline for HSQLDB configuration

--- a/pom.xml
+++ b/pom.xml
@@ -75,10 +75,11 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
-		<!--H2 -->
+		<!--HSQLDB -->
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
+			<groupId>org.hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+			<version>2.4.0</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
