Business logic implementation : implemented controllers, service layer, persistence layer. Made the following changes : * Added 404 response code in case a customer is not found. * Changed amounts to double in the API & the data model * Added List<Entity> to List<DTO> to mappers * Every entity with a reference now has a foreign key id as attribute to avoid unnecessary loading of referenced entities when updating

--- a/src/main/resources/api.yml
+++ b/src/main/resources/api.yml
@@ -83,6 +83,13 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+
+        404: #Not Found
+          description: Customer not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         500: # Internal server error
           description: An unexpected error occurred
           content:
@@ -207,7 +214,7 @@ components:
           type: string
         balance:
           type: number
-          format: float
+          format: double
         accounts:
           type: array
           items:
@@ -234,7 +241,7 @@ components:
           format: date-time
         amount:
           type: number
-          format: float
+          format: double
 
     AccountCreationDTO:
       type: object
@@ -247,7 +254,7 @@ components:
           format: int64
         initialCredit:
           type: number
-          format: float
+          format: double
 
     TransactionCreationDTO:
       type: object
@@ -260,7 +267,7 @@ components:
           format: int64
         amount:
           type: number
-          format: float
+          format: double
 
     ErrorResponse:
       type: object
