Implemented Account Creation & fixed display of transaction data on the customers page

--- a/src/main/resources/api.yml
+++ b/src/main/resources/api.yml
@@ -236,6 +236,9 @@ components:
       required:
         - amount
       properties:
+        id:
+          type: int
+          format: integer64
         date:
           type: string
           format: date-time
