Refactored data model so that accounts keep track of their balance

--- a/src/main/resources/api.yml
+++ b/src/main/resources/api.yml
@@ -245,6 +245,9 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Transaction'
+        balance:
+          type: number
+          format: double
 
     Transaction:
       type: object
